objects/LeadDivisionAndBU__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Unit_API__c</fullName>
        <label>Business Unit API</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Label__c</fullName>
        <label>Business Unit Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division_API__c</fullName>
        <label>Division API</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division_Label__c</fullName>
        <label>Division Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>LeadDivisionAndBU</label>
    <pluralLabel>LeadDivisionAndBU</pluralLabel>
</CustomObject>